--- a/playground/package.json
+++ b/playground/package.json
@@ -1,9 +1,21 @@
 {
   "name": "playground",
   "private": true,
+  "type": "module",
   "version": "0.0.0",
   "scripts": {
     "dev": "npx rsbuild dev",
     "build": "npx rsbuild build"
+  },
+  "devDependencies": {
+    "@rsbuild/core": "^0.0.23",
+    "@types/node": "^20.9.0"
+  },
+  "dependencies": {
+    "@remix-run/dev": "^2.2.0",
+    "@remix-run/node": "^2.2.0",
+    "@remix-run/react": "^2.2.0",
+    "@rsbuild/shared": "^0.0.23",
+    "isbot": "latest"
   }
 }
