--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "target": "ES2019",
-    "lib": ["DOM", "ESNext"],
+    "lib": ["ESNext"],
     "allowJs": true,
     "module": "Node16",
     "strict": true,
