--- a/playground/package.json
+++ b/playground/package.json
@@ -2,24 +2,28 @@
   "name": "playground",
   "private": true,
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.7.0",
   "scripts": {
-    "dev": "npx rsbuild dev",
+    "dev": "npx rsbuild build",
     "webapck": "rspack --mode=development --config webpack.browser.js & rspack --mode=development --config webpack.server.js",
     "build": "node ./build.mjs"
   },
   "devDependencies": {
     "@rsbuild/core": "^0.0.24",
-    "@types/node": "^20.9.0",
+    "@rsbuild/plugin-react": "^0.0.24",
+    "@types/node": "^20.9.1",
     "ts-node": "^10.9.1"
   },
   "dependencies": {
-    "@remix-run/dev": "^2.2.0",
-    "@remix-run/node": "^2.2.0",
-    "@remix-run/react": "^2.2.0",
+    "@remix-run/dev": "^2.3.0",
+    "@remix-run/express": "^2.3.0",
+    "@remix-run/node": "^2.3.0",
+    "@remix-run/react": "^2.3.0",
     "@rsbuild/shared": "^0.0.24",
     "@rspack/cli": "^0.3.13",
     "@rspack/core": "^0.3.13",
-    "isbot": "latest"
+    "cors": "^2.8.5",
+    "isbot": "3.7.1",
+    "webpack-node-externals": "^3.0.0"
   }
 }
