--- a/playground/package.json
+++ b/playground/package.json
@@ -11,8 +11,7 @@
   "devDependencies": {
     "@rsbuild/core": "^0.0.24",
     "@rsbuild/plugin-react": "^0.0.24",
-    "@types/node": "^20.9.1",
-    "ts-node": "^10.9.1"
+    "@types/node": "^20.9.1"
   },
   "dependencies": {
     "@remix-run/dev": "^2.3.0",
